Fix security header & contrast issue

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,7 +7,7 @@
   --color-accent-about: #66ffe5;
   --color-accent-collaborations: #ffd501;
   --color-accent-contact: #49fe18;
-  --color-accent-projects: #f6026a;
+  --color-accent-projects: #ac0068;
 
   /* Font */
   --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
